--- a/README.yml
+++ b/README.yml
@@ -3,7 +3,7 @@ owner:
   firstname: "Young"
   lastname: "Jamyla"
   hid: "su21-reu-376"
-  community: "599"
+  community: "reu"
   semester: "sp21"
 project:
   title: TBD
